# pico-template

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/button/: button.cpp  button.h
